# quant-project-template

./: Makefile  README.md  pyproject.toml  setup_instructions.md  terminal-notes.md
config/: parameters.yaml
src/your_module/: logic.py  main.py
tests/: test_logic.py
tools/: summarize_project.py
