[tool.poetry]
name = "quant-project-template"
version = "0.1.0"
description = ""
authors = ["victorbarna@hotmail.fr"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"

[tool.poetry.scripts]
summarize = "tools.summarize_project:main"